# heart-disease-mlops

./: .dockerignore  .gitignore  Dockerfile  Final_Report.md  LICENSE  Makefile  README.md  docker-compose.monitoring.yml  model_metadata.json  pyproject.toml  requirements-dev.txt  requirements.txt  sample_request.json
.github/workflows/: ci.yml
config/: config.yaml
data/source/: processed.cleveland.data
k8s/: deployment.yaml  service.yaml
monitoring/: grafana_dashboard.json  prometheus.yml
screenshots/: README.md
scripts/: download_dataset.py  verify_artifact.py
src/heart_disease_mlops/: __init__.py  config.py
src/heart_disease_mlops/api/: app.py  logging_utils.py  schemas.py
src/heart_disease_mlops/data/: download_data.py  eda.py  validation.py
src/heart_disease_mlops/ml/: artifacts.py  evaluation.py  preprocessing.py  train.py
tests/: conftest.py  test_api.py  test_data_validation.py  test_preprocessing.py  test_training_and_artifacts.py
